# ovispect

./: .claude-init.json  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.example.yml  compose.oidc.example.yml  compose.reverse-proxy.example.yml  compose.shared-network-oidc.example.yml  compose.shared-network.example.yml  pyproject.toml  sonar-project.properties  tailwind.config.js
.claude/commands/: sonar-coverage.md  sonar-fix.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  sonar.yml
scripts/: build-css.sh  fetch-geoip.sh
src/ovispect/: __init__.py  __main__.py  app.py  auth.py  config.py  events.py  formatting.py  geo.py  hash_password.py  oidc.py  ovpn.py  webhooks.py
src/ovispect/static/: app.css  app.src.css
src/ovispect/templates/: forbidden.html  index.html  login.html  login_error.html
tests/: conftest.py  test_app.py  test_auth.py  test_events.py  test_formatting.py  test_geo.py  test_management_client.py  test_oidc.py  test_parser.py  test_webhooks.py
tests/e2e/: README.md  conftest.py  test_dashboard.py
tests/fixtures/: dbip-country-lite-sample.csv  status3_sample.txt
