[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "ovispect"
version = "0.8.3"
description = "A lightweight, modern dashboard for OpenVPN's management interface."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ovispect contributors" }]
keywords = ["openvpn", "dashboard", "monitoring", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "bcrypt>=4.1",
    "httpx>=0.27",
    "authlib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "respx>=0.21",
    "types-requests",
]
e2e = [
    "pytest-playwright>=0.5",
]

[project.scripts]
ovispect = "ovispect.__main__:main"
ovispect-hash-password = "ovispect.hash_password:main"  # pragma: allowlist secret

[project.urls]
Homepage = "https://github.com/Upellift99/ovispect"
Repository = "https://github.com/Upellift99/ovispect"
Issues = "https://github.com/Upellift99/ovispect/issues"
Changelog = "https://github.com/Upellift99/ovispect/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ovispect"]

[tool.hatch.build.targets.sdist]
include = [
    "src/ovispect",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "TID", # tidy imports
    "PT",  # pytest style
    "PL",  # pylint subset
]
ignore = [
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true
files = ["src/ovispect"]

[tool.pytest.ini_options]
minversion = "8.0"
# `not e2e` excludes the Playwright suite by default — opt-in via `-m e2e` or
# by passing `tests/e2e` explicitly. See tests/e2e/README for setup.
addopts = "-ra --strict-markers --strict-config -m 'not e2e'"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["error"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end Playwright tests (requires `pip install -e .[e2e]` and `playwright install chromium`)",
]

[tool.coverage.run]
branch = true
source = ["src/ovispect"]
omit = [
    "src/ovispect/__main__.py",
    "src/ovispect/hash_password.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
]
